k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-api-svc
  labels:
    app: quote-api
spec:
  selector:
    app: quote-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
